Update references to legacy default branch

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -11,9 +11,9 @@
     <tr>
       <td><img src="{{ site.baseurl }}/assets/icons/download.ico" alt="Downloads" width="24" class="rotateimg270"></td>
       <td>
-        <a href="https://rawgit.com/klane/databall/master/report/databall-slides.pdf">slides</a> |
-        <a href="{{ site.github.zip_url | replace: 'gh-pages', 'master' }}">.zip</a> |
-        <a href="{{ site.github.tar_url | replace: 'gh-pages', 'master' }}">.tar.gz</a>
+        <a href="https://rawgit.com/klane/databall/main/report/databall-slides.pdf">slides</a> |
+        <a href="{{ site.github.zip_url | replace: 'gh-pages', 'main' }}">.zip</a> |
+        <a href="{{ site.github.tar_url | replace: 'gh-pages', 'main' }}">.tar.gz</a>
       </td>
     </tr>
   </table>
